// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CTALink Snapshots with a color passed in matches snapshot 1`] = `
<div
  class="CTA CTA--gray CTA--default"
>
  <div
    class="CTA-link"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`CTALink Snapshots without a color passed in matches snapshot 1`] = `
<div
  class="CTA CTA--brown CTA--default"
>
  <div
    class="CTA-link"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;
